--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
           <!-- Section 1: Encode/Decode Buttons -->
           <section id="code-label" class="flex justify-between mb-8">
-               <button class="flex-1 px-4 py-2 bg-blue-500 text-white rounded-md focus:outline-none" onclick="encode('input-text', 'shift-number')">Encode</button>
-               <button class="flex-1 px-4 py-2 bg-blue-500 text-white rounded-md focus:outline-none" onclick="decode('input-text', 'shift-number')">Decode</button>
+               <button class="flex-1 px-4 py-2 bg-blue-500 text-white rounded-md focus:outline-none" onclick="encode('input-text', 'shift-number', true)">Encode</button>
+               <button class="flex-1 px-4 py-2 bg-blue-500 text-white rounded-md focus:outline-none" onclick="encode('input-text', 'shift-number', false)">Decode</button>
           </section>
 
           <!-- Section 2: Shift Number and Buttons -->
           <section class="flex justify-center items-center gap-12 mb-8">
-               <h3 id="shift-number" class="text-2xl font-bold mr-4">4</h3>
+               <h3 id="shift-number" class="text-2xl font-bold mr-4">0</h3>
                <div class="flex items-center">
                     <button class="px-4 py-2 bg-blue-500 text-white rounded-md mr-2 focus:outline-none" onclick="changeShiftNum('+')">+</button>
                     <button class="px-4 py-2 bg-blue-500 text-white rounded-md focus:outline-none" onclick="changeShiftNum('-')">-</button>
