Improved functionality and add tests

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
           <!-- Section 1: Encode/Decode Buttons -->
           <section id="code-label" class="flex justify-between mb-8">
-               <button class="flex-1 px-4 py-2 bg-blue-500 text-white rounded-md focus:outline-none" onclick="encode('input-text', 'shift-number', true)">Encode</button>
-               <button class="flex-1 px-4 py-2 bg-blue-500 text-white rounded-md focus:outline-none" onclick="encode('input-text', 'shift-number', false)">Decode</button>
+               <button class="flex-1 px-4 py-2 bg-blue-500 w-2/4 text-white rounded-md focus:outline-none" onclick="encode('input-text', 'shift-number', true)">Encode</button>
+               <button class="flex-1 px-4 py-2 bg-blue-500 w-2/4 text-white rounded-md focus:outline-none" onclick="encode('input-text', 'shift-number', false)">Decode</button>
           </section>
 
           <!-- Section 2: Shift Number and Buttons -->
